<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Settings_screen">


    <Button
        android:id="@+id/button_dark_mode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:background="@color/buttonColor"
        android:text="Dark Mode"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/screenButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_signout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@color/buttonColor"
        android:text="Sign Out"
        android:textColor="@color/design_default_color_error"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/screenButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_light_mode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        android:background="@color/buttonColor"
        android:text="Light Mode"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/screenButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/screenButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:text="Profile"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:text="Homescreen"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:text="Settings"
            android:textColor="@color/backgroundColor"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>